// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Category Recommendation Layout renders Category Recommendation with eSpot and category data 1`] = `
<div
  data-testid="category-Kitchen"
/>
`;

exports[`Category Recommendation Layout renders empty Category Recommendation when eSpot not found 1`] = `
<div
  class="MuiGrid-root sc-ezrdKe dsbMot vertical-padding-2 MuiGrid-container MuiGrid-spacing-xs-2"
/>
`;
